// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCustomField displays the correct icon based on dropdown state 1`] = `
<View
  style={
    {
      "backgroundColor": "#303030",
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "#BABABA",
      "borderStyle": "solid",
      "borderTopLeftRadius": 10,
      "borderTopRightRadius": 10,
      "borderWidth": 1,
      "gap": 20,
      "paddingBottom": 20,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 20,
      "zIndex": 5,
    }
  }
>
  <View
    accessibilityLabel="Expand create custom field button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "color": "#F6F6F6",
        "flexDirection": "row",
        "fontFamily": "Inter",
        "fontSize": 12,
        "fontWeight": "400",
        "gap": 10,
        "opacity": 1,
        "width": "100%",
      }
    }
    testID="expand-create-custom-field-button"
  >
    <View
      accessibilityLabel="Create custom field plus icon"
      testID="create-custom-field-plus-icon"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="21"
        bbWidth="21"
        fill="none"
        focusable={false}
        height="21"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        vbHeight={16}
        vbWidth={16}
        width="21"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M12.667 8.667h-4v4H7.334v-4h-4V7.334h4v-4h1.333v4h4z"
            fill={
              {
                "type": 2,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <Text
      accessibilityLabel="Create custom field text"
      style={
        {
          "color": "#BABABA",
          "fontFamily": "Inter",
          "fontSize": 24,
          "fontWeight": "700",
        }
      }
      testID="create-custom-field-text"
    >
      Create Custom
    </Text>
    <View
      style={
        {
          "marginLeft": "auto",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="21"
        bbWidth="21"
        fill="none"
        focusable={false}
        height="21"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width="21"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="m7.41 8.295 4.59 4.58 4.59-4.58L18 9.705l-6 6-6-6z"
            fill={
              {
                "type": 2,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`CreateCustomField displays the correct icon based on dropdown state 2`] = `
<View
  style={
    {
      "backgroundColor": "#303030",
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "#BABABA",
      "borderStyle": "solid",
      "borderTopLeftRadius": 10,
      "borderTopRightRadius": 10,
      "borderWidth": 1,
      "gap": 20,
      "paddingBottom": 20,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 20,
      "zIndex": 5,
    }
  }
>
  <View
    accessibilityLabel="Сollapse create custom field button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "color": "#F6F6F6",
        "flexDirection": "row",
        "fontFamily": "Inter",
        "fontSize": 12,
        "fontWeight": "400",
        "gap": 10,
        "opacity": 1,
        "width": "100%",
      }
    }
    testID="сollapse-create-custom-field-button"
  >
    <View
      accessibilityLabel="Create custom field plus icon"
      testID="create-custom-field-plus-icon"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="21"
        bbWidth="21"
        fill="none"
        focusable={false}
        height="21"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        vbHeight={16}
        vbWidth={16}
        width="21"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M12.667 8.667h-4v4H7.334v-4h-4V7.334h4v-4h1.333v4h4z"
            fill={
              {
                "type": 2,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <Text
      accessibilityLabel="Create custom field text"
      style={
        {
          "color": "#BABABA",
          "fontFamily": "Inter",
          "fontSize": 24,
          "fontWeight": "700",
        }
      }
      testID="create-custom-field-text"
    >
      Create Custom
    </Text>
    <View
      style={
        {
          "marginLeft": "auto",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="21"
        bbWidth="21"
        fill="none"
        focusable={false}
        height="21"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width="21"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M12 5.83 15.17 9l1.41-1.41L12 3 7.41 7.59 8.83 9zm0 12.34L8.83 15l-1.41 1.41L12 21l4.59-4.59L15.17 15z"
            fill={
              {
                "type": 2,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <View
    style={
      {
        "borderTopColor": "#BABABA",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 17,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 20,
      }
    }
  >
    <View
      accessibilityLabel="Add new comment field"
      testID="add-new-comment-field"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#232323",
            "borderBottomLeftRadius": 10,
            "borderBottomRightRadius": 10,
            "borderTopLeftRadius": 10,
            "borderTopRightRadius": 10,
            "flexDirection": "row",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "400",
            "gap": 7,
            "opacity": 1,
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          }
        }
        testID="add-new-comment-button"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="21"
          bbWidth="21"
          color="#F6F6F6"
          fill="none"
          focusable={false}
          height="21"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 21,
                "width": 21,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width="21"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zM6 20V4h7v5h5v11z"
              fill={
                {
                  "type": 2,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <Text
          style={
            {
              "color": "#F6F6F6",
              "fontFamily": "Inter",
              "fontSize": 16,
              "fontWeight": "400",
            }
          }
          variant="secondary"
        >
          Comment
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CreateCustomField renders correctly in closed state 1`] = `
<View
  style={
    {
      "backgroundColor": "#303030",
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "#BABABA",
      "borderStyle": "solid",
      "borderTopLeftRadius": 10,
      "borderTopRightRadius": 10,
      "borderWidth": 1,
      "gap": 20,
      "paddingBottom": 20,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 20,
      "zIndex": 5,
    }
  }
>
  <View
    accessibilityLabel="Expand create custom field button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "color": "#F6F6F6",
        "flexDirection": "row",
        "fontFamily": "Inter",
        "fontSize": 12,
        "fontWeight": "400",
        "gap": 10,
        "opacity": 1,
        "width": "100%",
      }
    }
    testID="expand-create-custom-field-button"
  >
    <View
      accessibilityLabel="Create custom field plus icon"
      testID="create-custom-field-plus-icon"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="21"
        bbWidth="21"
        fill="none"
        focusable={false}
        height="21"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        vbHeight={16}
        vbWidth={16}
        width="21"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M12.667 8.667h-4v4H7.334v-4h-4V7.334h4v-4h1.333v4h4z"
            fill={
              {
                "type": 2,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <Text
      accessibilityLabel="Create custom field text"
      style={
        {
          "color": "#BABABA",
          "fontFamily": "Inter",
          "fontSize": 24,
          "fontWeight": "700",
        }
      }
      testID="create-custom-field-text"
    >
      Create Custom
    </Text>
    <View
      style={
        {
          "marginLeft": "auto",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="21"
        bbWidth="21"
        fill="none"
        focusable={false}
        height="21"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width="21"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="m7.41 8.295 4.59 4.58 4.59-4.58L18 9.705l-6 6-6-6z"
            fill={
              {
                "type": 2,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
